add feature send response, get all response and get pdf
